crates/graphcal-project/tests/snapshots/error_snapshots__error_extern_in_const.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
extern function call `demo::lerp` not allowed in const expression
    Diagnostic severity: error
Begin snippet for extern_in_const.gcl starting at line 4, column 1

snippet line 4: }
snippet line 5: const node c: Dimensionless = demo::lerp(1.0, 2.0, 0.5);
    label at line 5, columns 31 to 40: extern call not allowed here
diagnostic help: extern functions are runtime-provided and can only be called from runtime expressions (nodes, param defaults, and asserts)
diagnostic code: graphcal::P004
