crates/graphcal-project/tests/snapshots/error_snapshots__error_extern_struct_union_return.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
invalid extern function signature: `Outcome` is not a record type; extern struct returns need a single constructor named after the type
    Diagnostic severity: error
Begin snippet for extern_struct_union_return.gcl starting at line 8, column 1

snippet line 8: import plugin "graphcal:demo" as demo {
snippet line 9:     fn solve(x: Dimensionless) -> Outcome;
    label at line 9, columns 35 to 41: invalid signature
snippet line 10: }
diagnostic help: extern signatures support Bool, Int, quantity types, indexed collections of those scalar kinds over one or more declared index variables, and record struct returns with concrete fields; each dimension variable must be declared in the `<...>` binder list and bound by a bare quantity parameter or bare quantity-array element before compound uses, and every result axis must reuse an index variable that indexes some parameter
diagnostic code: graphcal::P001
