crates/graphcal-project/tests/snapshots/error_snapshots__error_extern_unresolved_alias.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
unknown function `other::lerp`
    Diagnostic severity: error
Begin snippet for extern_unresolved_alias.gcl starting at line 4, column 1

snippet line 4: }
snippet line 5: node x: Dimensionless = other::lerp(1.0, 2.0, 0.5);
    label at line 5, columns 25 to 35: unknown function
diagnostic help: check function name and ensure it is defined
diagnostic code: graphcal::N004
